<resources>
    <string name="app_name">Victoria Secret</string>

    <string name="hello_world">Hello Krish!</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_login">Login</string>
    <string name="action_shopping_cart">Shopping Cart</string>
    <string name="action_share_app">Share This App</string>
    <string name="action_policy">Policy</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="action_account_info">Account Information</string>
    <string name="action_wishlist">Wishlist</string>
    <string name="action_orders">My Orders</string>
    <string name="action_my_address">My Addresses</string>
    <string name="action_logout">Logout</string>
    <string name="action_home">Home</string>
    <string name="action_store_locate_1">View Nearby Store</string>
    <string name="action_store_locate_2">And Grab Store Offers</string>
    <string name="action_customer_service">Customer Service</string>
    <string name="action_privacy">Privacy</string>
    <string name="action_rewards">Rewards</string>


    <string name="app_description">Android drawer icon with material design animation</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About US</string>
    <string name="shipping">Shipping</string>
    <string name="faq">FAQs</string>
    <string name="returns">Returns</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="clear_all">Clear All</string>
    <string name="apply">Apply</string>
    <string name="filter">Filters</string>
    <string name="title_activity_place">PlaceActivity</string>
</resources>
