<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#8b8989"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:id="@+id/menuItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/action_login" />

    <TextView
        android:id="@+id/menuItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/action_cart" />
    <TextView
        android:id="@+id/menuItem3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/action_settings" />
</LinearLayout> 