<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/navdrawer_lay_store_locate"
        android:layout_width="@dimen/navdrawer_width"
        android:layout_height="50dp"
        android:layout_below="@id/categoryExpandableListView"
        android:layout_marginTop="1dp"
        android:background="#eaeaea"
        android:paddingLeft="15dp">

        <com.fashion.krish.customview.TintableImageView
            android:id="@+id/img_store_locate"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            app:tint="@drawable/select_gray_white"
            android:src="@drawable/store_locateicon"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/img_store_locate"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_store_locate_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@drawable/select_gray_white"
                android:text="@string/action_store_locate_1"/>
            <TextView
                android:id="@+id/txt_store_locate_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@drawable/select_gray_white"
                android:text="@string/action_store_locate_2"
                />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/navdrawer_lay_settings"
        android:layout_width="@dimen/navdrawer_width"
        android:layout_height="50dp"
        android:background="#eaeaea"
        android:layout_below="@id/navdrawer_lay_store_locate"
        android:paddingLeft="15dp">

        <com.fashion.krish.customview.TintableImageView
            android:id="@+id/img_setting"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            app:tint="@drawable/select_gray_white"
            android:src="@drawable/setting_icon"/>

        <TextView
            android:id="@+id/txt_share_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@drawable/select_gray_white"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/img_setting"
            android:text="@string/action_settings"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/navdrawer_lay_contact_us"
        android:layout_width="@dimen/navdrawer_width"
        android:layout_height="50dp"
        android:layout_below="@id/navdrawer_lay_settings"
        android:background="#eaeaea"
        android:gravity="center_vertical"
        android:paddingLeft="15dp">

        <com.fashion.krish.customview.TintableImageView
            android:id="@+id/img_contact"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            app:tint="@drawable/select_gray_white"
            android:src="@drawable/contact_icon"/>

        <TextView
            android:id="@+id/txt_contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/img_contact"
            android:textColor="@drawable/select_gray_white"
            android:text="@string/action_contact_us"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lay_menu_cms"
        android:layout_width="@dimen/navdrawer_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>


</LinearLayout>
