<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary">



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/txt_filter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/toolbar"
        android:textSize="20sp"
        android:textColor="@color/drawer_default_white"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/img_logo_title"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/toolbar"
        android:layout_marginLeft="-10dp"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:id="@+id/lay_dashboard_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:layout_alignParentRight="true">

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/search_icon"
            android:layout_gravity="center_vertical"
            />

        <ImageView
            android:id="@+id/img_cart"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/cart_icon"
            android:layout_marginLeft="7dp"
            android:layout_gravity="center_vertical"
            />


        <ImageView
            android:id="@+id/img_overflow"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:src="@drawable/right_nav_icon"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_filter_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_clear_all"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp"
            android:background="@drawable/button_purple_white_ripple"
            android:text="@string/clear_all"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp"
            android:background="@drawable/button_red_white_ripple"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:layout_marginLeft="5dp"
            />


    </LinearLayout>






</RelativeLayout>